SERVER-32516 remove make_optional type

(cherry picked from commit 3c34eda8d8a38b982a1659b919e9f4b5971ba512)